# scaleway-chat

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: cli.rs  config.rs  error.rs  hal.rs  lib.rs  logging.rs  main.rs  state.rs
src/nemotron/: chat.rs  client.rs  mod.rs  models.rs  stream.rs
src/scaleway/: auth.rs  client.rs  instances.rs  ips.rs  mod.rs  models.rs  provision.rs  snapshots.rs  volumes.rs
tests/: integration_tests.rs  new_algorithm_tests.rs
